Fix centre align to include text

--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -4,4 +4,6 @@ div {
     font-size: 32px;
     font-weight: bold;
     margin: auto;
+    width: 50%;
+    text-align: center;
   }
